--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "sapien-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.7.2",
     "@apollo/react-hooks": "^4.0.0",
