--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "bootstrap": "^5.2.3",
         "mdb-react-ui-kit": "^5.0.0",
-        "react-bootstrap": "^2.7.0"
+        "react-bootstrap": "^2.7.0",
+        "webpack": "^5.75.0"
     }
 }
