--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Sapien-Asethic-University-App",
+    "name": "sapien-asethic-university-app",
     "version": "1.0.0",
     "description": "",
     "main": "server/server.js",
@@ -17,8 +17,14 @@
         "concurrently": "^5.1.0"
     },
     "dependencies": {
+        "apollo-server": "^3.11.1",
         "bootstrap": "^5.2.3",
+        "bcrypt": "^5.1.0",
+        "express": "^4.18.2",
+        "graphql": "^16.6.0",
         "mdb-react-ui-kit": "^5.0.0",
+        "mongo": "^0.1.0",
+        "mongoose": "^6.0.0",
         "react-bootstrap": "^2.7.0"
     }
 }
