--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "bootstrap": "^5.2.3",
         "mdb-react-ui-kit": "^5.0.0",
         "react-bootstrap": "^2.7.0",
+        "react-player": "^2.11.0",
         "webpack": "^5.75.0"
     }
 }
