--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "bootstrap": "^5.2.3",
         "mdb-react-ui-kit": "^5.0.0",
+        "node": "^16.17.0",
         "react-bootstrap": "^2.7.0",
         "react-player": "^2.11.0",
         "webpack": "^5.75.0"
