--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,9 @@
 {
   "name": "sapien-server",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -13,7 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.11.1",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
